<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient3"
    tools:context=".Draw">

    <ImageView
        android:id="@+id/im1"
        android:layout_width="400dp"
        android:layout_height="369dp"
        android:layout_marginStart="8dp"

        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/sginupscreenbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/im2"
        android:layout_width="285dp"
        android:layout_height="315dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="8dp"
        android:src="@drawable/sginupbtnbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"

        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.11"
        android:gravity="center"
        android:text="@string/the_previous_winner_was"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/im1"
        app:layout_constraintStart_toStartOf="@+id/im1"
        app:layout_constraintTop_toTopOf="@+id/im1" />

    <TextView
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="40dp"

        android:layout_marginTop="36dp"
        android:layout_weight="0.16"
        android:gravity="center"

        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <TextView
        android:id="@+id/textViewYourScore"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0.11"
        android:gravity="center"
        android:text="@string/the_winner_is"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewSum"
        app:layout_constraintEnd_toEndOf="@+id/im1"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/im1"
        app:layout_constraintTop_toBottomOf="@+id/previous"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewSum"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="88dp"

        android:layout_weight="0.16"
        android:gravity="center"

        android:textColor="@color/deeppurple"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/im1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/im1"
        app:layout_constraintTop_toBottomOf="@+id/previous"
        tools:layout_editor_absoluteX="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"

        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="40dp"
        android:text="@string/this_will_clase_the_previous_cycle"
        app:layout_constraintBottom_toTopOf="@+id/buttonspin"
        app:layout_constraintEnd_toEndOf="@+id/im1"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toStartOf="@+id/im1"
        app:layout_constraintTop_toTopOf="@+id/im2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonspin"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:background="@drawable/custom_btn"
        android:text="@string/spin_roll"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="@+id/im2"
        app:layout_constraintEnd_toEndOf="@+id/im2"
        app:layout_constraintStart_toStartOf="@+id/im2" />

</android.support.constraint.ConstraintLayout>